prod/devopsblog-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsblog
  namespace: devopsblog-prod
spec:
  selector:
    app.kubernetes.io/name: devopsblog
    app.kubernetes.io/instance: devopsblog-prod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
